@@ -1,9 +1,9 @@
 
-# pkgIndex.tcl -
-#    A new manually generated "pkgIndex.tcl" file for tls to replace the original
-#    which didn't include the commands from "tls.tcl".
+# pkgIndex.tcl - 
 #
-#    Al Borr 12/99, last revised Jan 11/00.
+#    A new manually generated "pkgIndex.tcl" file for tls to
+#    replace the original which didn't include the commands from "tls.tcl".
+#
 
-package ifneeded tls 1.3 "[list load [file join $dir @RELPATH@ @tls_LIB_FILE@] ] ; [list source [file join $dir tls.tcl] ]"
+package ifneeded tls 1.4 "[list load [file join $dir @RELPATH@ @tls_LIB_FILE@] ] ; [list source [file join $dir tls.tcl] ]"
 
